[gd_scene load_steps=2 format=3 uid="uid://bxh66hg84qbo4"]

[ext_resource type="Script" path="res://Scripts/UI/ManualTuningPanel.gd" id="1_x1ht5"]

[node name="VBoxContainer" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x1ht5")

[node name="TimeScaleContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="TimeScaleContainer"]
layout_mode = 2
text = "Time Scale:"

[node name="TimeScaleSlider" type="HSlider" parent="TimeScaleContainer"]
layout_mode = 2

[node name="TimeScaleLabel" type="Label" parent="TimeScaleContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2

[node name="ParameterContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
